Project

General

Profile

Actions

Bug #65188

open

rgwlc: Executing radosgw-admin lc process --bucket <bkt-name> without setting lc rule results in Segmentation fault

Added by Matt Benjamin about 1 month ago. Updated 27 days ago.

Status:
Pending Backport
Priority:
Low
Assignee:
Target version:
-
% Done:

0%

Source:
Tags:
backport_processed
Backport:
squid,reef
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

[LC-Process]: Executing radosgw-admin lc process --bucket <bkt-name> without setting lc rule results in Segmentation fault

Description of problem:
[LC-Process]: Executing radosgw-admin lc process --bucket <bkt-name> without setting lc rule results in Segmentation fault

Version-Release number of selected component (if applicable):
ceph version 18.2.1-73.el9cp

How reproducible:
3/3

Steps to Reproduce:
1. Deploy cluster with: ceph version 18.2.1-73.el9cp
2. Create a bucket: <bkt_name>
3. Upload object to the bucket
4. Perform: radosgw-admin lc process --bucket <bkt_name>

Actual results:
Throwing error:

  • Caught signal (Segmentation fault)
    in thread 7f74eed29800 thread_name:radosgw-admin
    ceph version 18.2.1-73.el9cp (16d1bc4bed21ede5993c301b4626fa21cbe97cff) reef (stable)
    1: /lib64/libc.so.6(+0x54db0) [0x7f74ef254db0]
    2: (RGWLC::process_bucket(int, int, RGWLC::LCWorker*, std::__cxx11::basic_string<char, std::char_traits<char>, std::allocator<char> > const&, bool)+0x2b6) [0x556e82e69626]
    3: (RGWLC::process(RGWLC::LCWorker*, std::unique_ptr<rgw::sal::Bucket, std::default_delete<rgw::sal::Bucket> > const&, bool)+0xb7) [0x556e82e6d1a7]
    4: (RGWRados::process_lc(std::unique_ptr<rgw::sal::Bucket, std::default_delete<rgw::sal::Bucket> > const&)+0xdd) [0x556e831d409d]
    5: main()
    6: /lib64/libc.so.6(+0x3feb0) [0x7f74ef23feb0]
    7: __libc_start_main()
    8: _start()
    2024-03-20T02:17:03.968-0400 7f74eed29800 -1
    Caught signal (Segmentation fault) *
    in thread 7f74eed29800 thread_name:radosgw-admin

Related issues 2 (1 open1 closed)

Copied to rgw - Backport #65352: reef: rgwlc: Executing radosgw-admin lc process --bucket <bkt-name> without setting lc rule results in Segmentation faultNewMatt BenjaminActions
Copied to rgw - Backport #65353: squid: rgwlc: Executing radosgw-admin lc process --bucket <bkt-name> without setting lc rule results in Segmentation faultResolvedCasey BodleyActions
Actions #1

Updated by Matt Benjamin about 1 month ago

  • Status changed from In Progress to Fix Under Review
  • Pull request ID set to 56535
Actions #2

Updated by Casey Bodley 27 days ago

  • Status changed from Fix Under Review to Pending Backport
Actions #3

Updated by Backport Bot 27 days ago

  • Copied to Backport #65352: reef: rgwlc: Executing radosgw-admin lc process --bucket <bkt-name> without setting lc rule results in Segmentation fault added
Actions #4

Updated by Backport Bot 27 days ago

  • Copied to Backport #65353: squid: rgwlc: Executing radosgw-admin lc process --bucket <bkt-name> without setting lc rule results in Segmentation fault added
Actions #5

Updated by Backport Bot 27 days ago

  • Tags set to backport_processed
Actions

Also available in: Atom PDF