rgwlc: check for no-bucket at bucket_lc_process() preamble

Avoids trivial segfault deferencing the bucket pointer.

Fixes: https://tracker.ceph.com/issues/65188
Resolves: rhbz#2270402

Signed-off-by: Matt Benjamin <mbenjamin@redhat.com>
(cherry picked from commit d5f6fe772f83d9e6b1ebaafdb1e8274041b0d684)